[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Background/Background.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Cards/Card Borders etc/Back_Texture.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/Card Borders etc/Gold_Border.png" type="Texture" id=3]
[ext_resource path="res://scene_script/Playspace.gd" type="Script" id=4]
[ext_resource path="res://scene_script/DeckDraw.gd" type="Script" id=5]
[ext_resource path="res://Assets/Cards/Card Borders etc/UNO_BUTTON.png" type="Texture" id=6]
[ext_resource path="res://Assets/Cards/Card Borders etc/UNO_HOVER.png" type="Texture" id=7]
[ext_resource path="res://Assets/Cards/Card Borders etc/UNO_PRESSED.png" type="Texture" id=8]
[ext_resource path="res://Assets/Cards/Card Borders etc/UNO_NORMAL.png" type="Texture" id=9]
[ext_resource path="res://Assets/Cards/Card Borders etc/PASS_BUTTON.jpg" type="Texture" id=10]
[ext_resource path="res://Assets/Cards/Card Borders etc/PASS_HOVER.jpg" type="Texture" id=11]
[ext_resource path="res://Assets/Cards/Card Borders etc/PASS_PRESSED.jpg" type="Texture" id=12]
[ext_resource path="res://Assets/Cards/Card Borders etc/WILD_RED.jpg" type="Texture" id=13]
[ext_resource path="res://Assets/Cards/Card Borders etc/HOVER_RED.jpg" type="Texture" id=14]
[ext_resource path="res://Assets/Cards/Card Borders etc/HOVER_B.jpg" type="Texture" id=15]
[ext_resource path="res://Assets/Cards/Card Borders etc/WILD_YELLOW.jpg" type="Texture" id=16]
[ext_resource path="res://Assets/Cards/Card Borders etc/HOVER_G.jpg" type="Texture" id=17]
[ext_resource path="res://Assets/Cards/Card Borders etc/HOVER_Y.jpg" type="Texture" id=18]
[ext_resource path="res://Assets/Cards/Card Borders etc/WILD_GREEN.jpg" type="Texture" id=19]
[ext_resource path="res://Assets/Cards/Card Borders etc/WILD_BLUE.jpg" type="Texture" id=20]
[ext_resource path="res://fonts/nobile.tres" type="DynamicFont" id=21]
[ext_resource path="res://Assets/download.png" type="Texture" id=22]
[ext_resource path="res://fonts/montserrat.otf" type="DynamicFontData" id=23]
[ext_resource path="res://fonts/montserat.tres" type="DynamicFont" id=24]
[ext_resource path="res://Assets/download (1).png" type="Texture" id=25]
[ext_resource path="res://Assets/right.png" type="Texture" id=26]
[ext_resource path="res://Assets/left.png" type="Texture" id=27]
[ext_resource path="res://Assets/UNOFLASH.jpg" type="Texture" id=28]
[ext_resource path="res://icons/icon.png" type="Texture" id=29]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 23 )

[sub_resource type="Theme" id=3]

[node name="Playspace" type="Node2D"]
script = ExtResource( 4 )

[node name="CardSlots" type="Node" parent="."]

[node name="CardsInPlay" type="Node" parent="."]

[node name="Cards" type="Node" parent="."]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 683.694, 339.993 )
scale = Vector2( 0.735834, 0.602458 )
texture = ExtResource( 1 )

[node name="N0" type="TextureRect" parent="Background"]
visible = false
margin_left = -884.774
margin_top = -485.737
margin_right = -824.774
margin_bottom = -445.737
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO0" type="TextureRect" parent="Background"]
visible = false
margin_left = -808.67
margin_top = -487.397
margin_right = -768.67
margin_bottom = -447.397
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO5" type="TextureRect" parent="Background"]
visible = false
margin_left = 607.684
margin_top = -488.591
margin_right = 647.684
margin_bottom = -448.591
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO1" type="TextureRect" parent="Background"]
visible = false
margin_left = -550.943
margin_top = -483.88
margin_right = -510.943
margin_bottom = -443.88
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO2" type="TextureRect" parent="Background"]
visible = false
margin_left = -300.416
margin_top = -487.397
margin_right = -260.416
margin_bottom = -447.397
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO3" type="TextureRect" parent="Background"]
visible = false
margin_left = 9.61932
margin_top = -485.634
margin_right = 49.6193
margin_bottom = -445.634
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UNO4" type="TextureRect" parent="Background"]
visible = false
margin_left = 292.226
margin_top = -489.386
margin_right = 332.226
margin_bottom = -449.386
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N1" type="TextureRect" parent="Background"]
visible = false
margin_left = -625.451
margin_top = -485.737
margin_right = -565.451
margin_bottom = -445.737
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARROWR" type="TextureRect" parent="Background"]
margin_left = -417.785
margin_top = -426.957
margin_right = 302.215
margin_bottom = -366.957
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ARROWL" type="TextureRect" parent="Background"]
visible = false
margin_left = -417.785
margin_top = -426.957
margin_right = 302.215
margin_bottom = -366.957
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N2" type="TextureRect" parent="Background"]
visible = false
margin_left = -375.281
margin_top = -485.737
margin_right = -315.281
margin_bottom = -445.737
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N3" type="TextureRect" parent="Background"]
visible = false
margin_left = -70.1953
margin_top = -485.737
margin_right = -10.1953
margin_bottom = -445.737
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N4" type="TextureRect" parent="Background"]
visible = false
margin_left = 213.534
margin_top = -487.6
margin_right = 273.534
margin_bottom = -447.6
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N5" type="TextureRect" parent="Background"]
visible = false
margin_left = 526.247
margin_top = -487.6
margin_right = 586.247
margin_bottom = -447.6
texture = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="junk" type="TextureRect" parent="Background"]
visible = false
margin_left = 526.247
margin_top = -487.6
margin_right = 586.247
margin_bottom = -447.6
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NUMER0" type="Label" parent="Background"]
visible = false
anchor_left = -0.00736542
anchor_top = 0.0391461
anchor_right = 0.0759679
anchor_bottom = 0.0862154
margin_left = -870.632
margin_top = -529.815
margin_right = -970.632
margin_bottom = -542.815
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NUMER1" type="Label" parent="Background"]
visible = false
anchor_left = 0.12611
anchor_top = 0.0424555
anchor_right = 0.209443
anchor_bottom = 0.0895248
margin_left = -870.632
margin_top = -533.542
margin_right = -970.632
margin_bottom = -546.542
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NUMER2" type="Label" parent="Background"]
visible = false
anchor_left = 0.257996
anchor_top = 0.0523833
anchor_right = 0.341329
anchor_bottom = 0.0994526
margin_left = -870.633
margin_top = -544.721
margin_right = -970.633
margin_bottom = -557.721
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NUMER3" type="Label" parent="Background"]
visible = false
anchor_left = 0.417689
anchor_top = 0.0573472
anchor_right = 0.501022
anchor_bottom = 0.104417
margin_left = -870.632
margin_top = -550.31
margin_right = -970.632
margin_bottom = -563.31
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NUMER4" type="Label" parent="Background"]
visible = false
anchor_left = 0.563876
anchor_top = 0.04411
anchor_right = 0.647209
anchor_bottom = 0.0911793
margin_left = -870.632
margin_top = -535.405
margin_right = -970.632
margin_bottom = -548.405
custom_fonts/font = ExtResource( 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NUMER5" type="Label" parent="Background"]
visible = false
anchor_left = 0.726747
anchor_top = 0.0374915
anchor_right = 0.81008
anchor_bottom = 0.0845607
margin_left = -870.632
margin_top = -527.952
margin_right = -970.632
margin_bottom = -540.952
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "07
"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LIGHT0" type="TextureRect" parent="Background"]
visible = false
margin_left = -883.492
margin_top = -527.411
margin_right = -858.492
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIGHT1" type="TextureRect" parent="Background"]
visible = false
margin_left = -626.728
margin_top = -527.411
margin_right = -601.728
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIGHT2" type="TextureRect" parent="Background"]
visible = false
margin_left = -377.049
margin_top = -527.411
margin_right = -352.049
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIGHT3" type="TextureRect" parent="Background"]
visible = false
margin_left = -64.336
margin_top = -527.411
margin_right = -39.336
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIGHT4" type="TextureRect" parent="Background"]
visible = false
margin_left = 213.292
margin_top = -527.411
margin_right = 238.292
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LIGHT5" type="TextureRect" parent="Background"]
visible = false
margin_left = 526.004
margin_top = -527.411
margin_right = 551.004
margin_bottom = -502.411
texture = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LABEL0" type="Label" parent="Background"]
visible = false
anchor_left = 0.0132914
anchor_top = -0.00718415
anchor_right = 0.0966247
anchor_bottom = 0.0398851
margin_left = -870.632
margin_top = -529.815
margin_right = -869.632
margin_bottom = -528.815
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LABEL1" type="Label" parent="Background"]
visible = false
anchor_left = 0.148121
anchor_top = -0.00484416
anchor_right = 0.236313
anchor_bottom = 0.0483199
margin_left = -870.632
margin_top = -532.451
margin_right = -878.96
margin_bottom = -538.313
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LABEL2" type="Label" parent="Background"]
visible = false
anchor_left = 0.280704
anchor_top = -0.000164079
anchor_right = 0.364038
anchor_bottom = 0.0469052
margin_left = -870.632
margin_top = -537.72
margin_right = -869.632
margin_bottom = -536.72
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LABEL3" type="Label" parent="Background"]
visible = false
anchor_left = 0.444748
anchor_top = -0.000164079
anchor_right = 0.528081
anchor_bottom = 0.0469052
margin_left = -870.632
margin_top = -537.72
margin_right = -869.632
margin_bottom = -536.72
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LABEL4" type="Label" parent="Background"]
visible = false
anchor_left = 0.588567
anchor_top = -0.000164079
anchor_right = 0.6719
anchor_bottom = 0.0469052
margin_left = -870.632
margin_top = -537.72
margin_right = -869.632
margin_bottom = -536.72
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LABEL5" type="Label" parent="Background"]
visible = false
anchor_left = 0.75261
anchor_top = 0.00451595
anchor_right = 0.835943
anchor_bottom = 0.0515852
margin_left = -870.633
margin_top = -542.99
margin_right = -869.633
margin_bottom = -541.99
custom_fonts/font = ExtResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAJHA"
valign = 1
autowrap = true
clip_text = true
uppercase = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Deck" type="Node2D" parent="."]
position = Vector2( 869.118, 135.156 )
__meta__ = {
"_edit_group_": true
}

[node name="DeckDraw" type="TextureButton" parent="Deck"]
margin_right = 486.0
margin_bottom = 759.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
margin_left = 40.0
margin_top = 200.0
margin_right = 200.0
margin_bottom = 360.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="GridContainer"]
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
theme = SubResource( 3 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="Button2" type="TextureButton" parent="GridContainer"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 15 )

[node name="Button3" type="TextureButton" parent="GridContainer"]
margin_top = 79.0
margin_right = 75.0
margin_bottom = 154.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 18 )

[node name="Button4" type="TextureButton" parent="GridContainer"]
margin_left = 79.0
margin_top = 79.0
margin_right = 154.0
margin_bottom = 154.0
rect_min_size = Vector2( 75, 75 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 17 )

[node name="UNO" type="TextureButton" parent="."]
margin_left = 1027.0
margin_top = 144.0
margin_right = 1124.0
margin_bottom = 188.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PASS" type="TextureButton" parent="."]
margin_left = 1053.0
margin_top = 254.0
margin_right = 1117.0
margin_bottom = 316.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="UNO" to="." method="_on_UNO_pressed"]
[connection signal="pressed" from="PASS" to="." method="_on_PASS_pressed"]
